force-app/main/default/objects/invoiceItems__c/invoiceItems__c.object-meta.xml
<CustomObject>
    <label>invoiceItems</label>
    <nameField>
        <label>invoiceItems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InvoiceItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>