force-app/main/default/objects/invoiceItems__c/fields/InvItemExternalId__c.field-meta.xml
<CustomField>
    <fullName>InvItemExternalId__c</fullName>
    <label>InvItemExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>