force-app/main/default/objects/invoiceItems__c/fields/Invoices__c.field-meta.xml
<CustomField>
    <fullName>Invoices__c</fullName>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>InvoiceItems</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>