force-app/main/default/objects/invoiceItems__c/fields/opprProd__c.field-meta.xml
<CustomField>
    <fullName>opprProd__c</fullName>
    <label>opprProd</label>
    <length>111</length>
    <type>Text</type>
</CustomField>