force-app/main/default/objects/invoiceItems__c/fields/UnitAmount__c.field-meta.xml
<CustomField>
    <fullName>UnitAmount__c</fullName>
    <label>UnitAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>